TAII CIF: Updated Venia Logs and OSGI config for venia setup

--- a/ui.config/src/main/content/jcr_root/apps/venia/osgiconfig/config/org.apache.sling.commons.log.LogManager.factory.config~venia.cfg.json
+++ b/ui.config/src/main/content/jcr_root/apps/venia/osgiconfig/config/org.apache.sling.commons.log.LogManager.factory.config~venia.cfg.json
@@ -4,6 +4,6 @@
     "com.venia"
   ],
   "org.apache.sling.commons.log.level": "debug",
-  "org.apache.sling.commons.log.file": "logs/error.log",
+  "org.apache.sling.commons.log.file": "logs/venia.log",
   "org.apache.sling.commons.log.additiv": "true"
 }
